[gd_scene load_steps=42 format=3 uid="uid://05pttlflf183"]

[ext_resource type="Script" uid="uid://bk58odjyfawkr" path="res://demos/src/camera.gd" id="1_0miaj"]
[ext_resource type="Script" uid="uid://dv33nxyvwjabi" path="res://demos/demo.gd" id="1_a56cn"]
[ext_resource type="Shader" uid="uid://foqf6idimvb0" path="res://addons/decal_compatibility/decal.gdshader" id="1_umdxf"]
[ext_resource type="Texture2D" uid="uid://c3wmc6bn7ua77" path="res://assets/decal_textures/Alien Surface 01_BaseColor.jpg" id="2_0miaj"]
[ext_resource type="Texture2D" uid="uid://bjgl15l6fx00f" path="res://assets/environment/floor.png" id="2_wppxa"]
[ext_resource type="Texture2D" uid="uid://b1weya5tioumr" path="res://assets/environment/wall.png" id="3_5flai"]
[ext_resource type="Script" uid="uid://feckn7f3pmud" path="res://addons/decal_compatibility/decal_compatibility.gd" id="3_umdxf"]
[ext_resource type="Texture2D" uid="uid://dvqxuqxsbx11e" path="res://assets/decal_textures/Godot_icon.png" id="4_3xrpy"]
[ext_resource type="Texture2D" uid="uid://dwwqhljh8l8t3" path="res://assets/decal_textures/bullethole.png" id="7_6kxbp"]
[ext_resource type="Texture2D" uid="uid://bv2kjwha3158k" path="res://assets/decal_textures/loading.png" id="8_kdopp"]
[ext_resource type="AudioStream" uid="uid://xdbr2j80hmdw" path="res://assets/gun-fire.mp3" id="11_ma0ir"]
[ext_resource type="Shader" uid="uid://0ysverksjyo3" path="res://addons/decal_compatibility/decal_instance.gdshader" id="11_twex6"]
[ext_resource type="Script" uid="uid://bw6heqxc8r4tx" path="res://addons/decal_compatibility/decal_instance_compatibility.gd" id="12_c6bat"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_6kxbp"]

[sub_resource type="Sky" id="Sky_kdopp"]
sky_material = SubResource("ProceduralSkyMaterial_6kxbp")

[sub_resource type="Environment" id="Environment_5flai"]
background_mode = 2
sky = SubResource("Sky_kdopp")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tkqtn"]
albedo_texture = ExtResource("2_wppxa")
uv1_scale = Vector3(48, 48, 1)
texture_filter = 5

[sub_resource type="BoxMesh" id="BoxMesh_0miaj"]
material = SubResource("StandardMaterial3D_tkqtn")
size = Vector3(22, 0.5, 22)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d6ua1"]
albedo_color = Color(0, 0.615686, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_64soo"]
material = SubResource("StandardMaterial3D_d6ua1")
radius = 2.0
height = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_umjme"]
albedo_color = Color(0.411765, 0.698039, 0.74902, 1)

[sub_resource type="SphereMesh" id="SphereMesh_wppxa"]
material = SubResource("StandardMaterial3D_umjme")
radius = 1.0
height = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uj38w"]
albedo_color = Color(0.686952, 0.386444, 0.0678412, 1)

[sub_resource type="BoxMesh" id="BoxMesh_mv2vf"]
material = SubResource("StandardMaterial3D_uj38w")
size = Vector3(2, 2, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u0d3p"]
albedo_texture = ExtResource("3_5flai")
uv1_scale = Vector3(6, 18, 6)
texture_filter = 5

[sub_resource type="BoxMesh" id="BoxMesh_umdxf"]
material = SubResource("StandardMaterial3D_u0d3p")
size = Vector3(3, 10, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5flai"]
albedo_color = Color(1, 1, 0.309804, 1)
stencil_mode = 3
stencil_flags = 2

[sub_resource type="TorusMesh" id="TorusMesh_d6ua1"]
material = SubResource("StandardMaterial3D_5flai")
inner_radius = 0.001
outer_radius = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wppxa"]
render_priority = 0
shader = ExtResource("1_umdxf")
shader_parameter/albedo = ExtResource("4_3xrpy")
shader_parameter/modulate = Color(1, 1, 1, 0.788235)
shader_parameter/albedo_mix = 0.7
shader_parameter/scale_mod = Vector3(0.5, 1.3333334, 0.5)
shader_parameter/cube_half_size = Vector3(1, 0.375, 1)
shader_parameter/enable_y_fade = false
shader_parameter/fade_start = 0.3
shader_parameter/fade_end = 0.7
shader_parameter/fade_power = 1.0

[sub_resource type="BoxMesh" id="BoxMesh_3xrpy"]
material = SubResource("ShaderMaterial_wppxa")
size = Vector3(2, 0.75, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_twex6"]
render_priority = 0
shader = ExtResource("1_umdxf")
shader_parameter/albedo = ExtResource("4_3xrpy")
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/albedo_mix = 0.8
shader_parameter/scale_mod = Vector3(0.5, 0.5, 0.5)
shader_parameter/cube_half_size = Vector3(1, 1, 1)
shader_parameter/enable_y_fade = false
shader_parameter/fade_start = 0.3
shader_parameter/fade_end = 0.7
shader_parameter/fade_power = 1.0

[sub_resource type="BoxMesh" id="BoxMesh_c6bat"]
material = SubResource("ShaderMaterial_twex6")
size = Vector3(2, 2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_umdxf"]
render_priority = 0
shader = ExtResource("1_umdxf")
shader_parameter/albedo = ExtResource("2_0miaj")
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/albedo_mix = 1.0
shader_parameter/scale_mod = Vector3(0.125, 0.5, 0.125)
shader_parameter/cube_half_size = Vector3(4, 1, 4)
shader_parameter/enable_y_fade = true
shader_parameter/fade_start = 0.3
shader_parameter/fade_end = 0.7
shader_parameter/fade_power = 1.0

[sub_resource type="BoxMesh" id="BoxMesh_wppxa"]
material = SubResource("ShaderMaterial_umdxf")
size = Vector3(8, 2, 8)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a56cn"]
render_priority = 0
shader = ExtResource("1_umdxf")
shader_parameter/albedo = ExtResource("8_kdopp")
shader_parameter/modulate = Color(1, 1, 1, 0.901961)
shader_parameter/albedo_mix = 0.8
shader_parameter/scale_mod = Vector3(0.15625, 0.5, 0.2777778)
shader_parameter/cube_half_size = Vector3(3.2, 1, 1.8)
shader_parameter/enable_y_fade = false
shader_parameter/fade_start = 0.3
shader_parameter/fade_end = 0.7
shader_parameter/fade_power = 1.0

[sub_resource type="BoxMesh" id="BoxMesh_ma0ir"]
material = SubResource("ShaderMaterial_a56cn")
size = Vector3(6.4, 2, 3.6)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5flai"]
render_priority = 0
shader = ExtResource("1_umdxf")
shader_parameter/albedo = ExtResource("8_kdopp")
shader_parameter/modulate = Color(1, 1, 1, 0.729412)
shader_parameter/albedo_mix = 0.9
shader_parameter/scale_mod = Vector3(0.15625, 10, 0.2777778)
shader_parameter/cube_half_size = Vector3(3.2, 0.05, 1.8)
shader_parameter/enable_y_fade = false
shader_parameter/fade_start = 0.3
shader_parameter/fade_end = 0.7
shader_parameter/fade_power = 1.0

[sub_resource type="BoxMesh" id="BoxMesh_u0d3p"]
material = SubResource("ShaderMaterial_5flai")
size = Vector3(6.4, 0.1, 3.6)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v2kpa"]
render_priority = 0
shader = ExtResource("11_twex6")
shader_parameter/albedo = ExtResource("7_6kxbp")
shader_parameter/modulate = Color(1, 1, 1, 0.901961)
shader_parameter/albedo_mix = 0.9
shader_parameter/scale_mod = Vector3(2, 1, 2)
shader_parameter/cube_half_size = Vector3(0.25, 0.5, 0.25)
shader_parameter/enable_y_fade = false
shader_parameter/fade_start = 0.3
shader_parameter/fade_end = 0.7
shader_parameter/fade_power = 1.0

[sub_resource type="BoxMesh" id="BoxMesh_l33fo"]
material = SubResource("ShaderMaterial_v2kpa")
size = Vector3(0.5, 1, 0.5)

[sub_resource type="MultiMesh" id="MultiMesh_hp8nf"]
transform_format = 1
use_custom_data = true
instance_count = 10
mesh = SubResource("BoxMesh_l33fo")
buffer = PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1)

[node name="Demo" type="Node3D"]
script = ExtResource("1_a56cn")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5flai")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ma0ir")
volume_db = -11.03
max_polyphony = 5

[node name="Label" type="Label" parent="."]
offset_left = 4.0
offset_top = 3.0
offset_right = 44.0
offset_bottom = 26.0
metadata/_edit_lock_ = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.692143, -0.172164, -0.700926, 0, -0.971134, 0.238533, -0.72176, -0.165099, -0.672164, 0, 3.07247, 0)
shadow_enabled = true
metadata/_edit_lock_ = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.803543, -0.277759, 0.526469, -0.0271965, 0.900661, 0.43367, -0.594626, 0.334154, -0.731274, 8.06642, 3.50017, -5.64943)
near = 0.01
far = 100.0
script = ExtResource("1_0miaj")
sensitivity = 0.1
metadata/_edit_lock_ = true

[node name="Environment" type="Node3D" parent="."]
metadata/_edit_lock_ = true

[node name="Ground" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.34137, -0.749068, 0)
mesh = SubResource("BoxMesh_0miaj")
skeleton = NodePath("../..")
metadata/_edit_lock_ = true

[node name="Sphere" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.49757, -0.226564, -0.600109)
mesh = SubResource("SphereMesh_64soo")
skeleton = NodePath("../..")
metadata/_edit_lock_ = true

[node name="Sphere2" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.24451, -0.18583, 0.93522)
mesh = SubResource("SphereMesh_wppxa")
skeleton = NodePath("../..")
metadata/_edit_lock_ = true

[node name="Sphere3" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.57029, -0.947788, 4.15267)
mesh = SubResource("SphereMesh_wppxa")
skeleton = NodePath("../..")
metadata/_edit_lock_ = true

[node name="Sphere4" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.24451, -0.18583, 0.93522)
mesh = SubResource("SphereMesh_wppxa")
skeleton = NodePath("../..")
metadata/_edit_lock_ = true

[node name="Prism" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(0.80278, -0.0621309, 0.59303, 0.456773, 0.703368, -0.544639, -0.383279, 0.708105, 0.59303, 3.19055, -0.780062, -5.25794)
mesh = SubResource("BoxMesh_mv2vf")
skeleton = NodePath("../..")
metadata/_edit_lock_ = true

[node name="Box" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.07119, -0.18583, 2.9821858)
mesh = SubResource("BoxMesh_umdxf")
skeleton = NodePath("../..")
metadata/_edit_lock_ = true

[node name="Torus" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.18455, -1.13135, 0.414456)
mesh = SubResource("TorusMesh_d6ua1")
skeleton = NodePath("../..")
metadata/_edit_lock_ = true

[node name="Label3D" type="Label3D" parent="Environment/Torus"]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 1.239131, 0)
pixel_size = 0.01
text = "Player Stencil"

[node name="CompatibilityDecals" type="Node3D" parent="."]
metadata/_edit_lock_ = true

[node name="GodotOnBox" type="MeshInstance3D" parent="CompatibilityDecals"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 4.59291, 0.393388, 1.4164073)
gi_lightmap_scale = 0
mesh = SubResource("BoxMesh_3xrpy")
Skeleton = null
skeleton = NodePath("../..")
script = ExtResource("3_umdxf")
size = Vector3(2, 0.75, 2)
texture = ExtResource("4_3xrpy")
modulate = Color(1, 1, 1, 0.788235)
albedo_mix = 0.7
enable_fade = false
metadata/_custom_type_script = "uid://feckn7f3pmud"

[node name="MovingGodot" type="MeshInstance3D" parent="CompatibilityDecals"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.20376, 0.599118, 0)
cast_shadow = 0
gi_lightmap_scale = 0
mesh = SubResource("BoxMesh_c6bat")
Skeleton = null
script = ExtResource("3_umdxf")
texture = ExtResource("4_3xrpy")
albedo_mix = 0.8
enable_fade = false
metadata/_custom_type_script = "uid://feckn7f3pmud"

[node name="SlimeOnFloor" type="MeshInstance3D" parent="CompatibilityDecals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.82018, -0.0769577, -3.16319)
gi_lightmap_scale = 0
mesh = SubResource("BoxMesh_wppxa")
Skeleton = null
script = ExtResource("3_umdxf")
size = Vector3(8, 2, 8)
texture = ExtResource("2_0miaj")
metadata/_custom_type_script = "uid://feckn7f3pmud"

[node name="MyRotatingLogo" type="MeshInstance3D" parent="CompatibilityDecals"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3.19326, 0, 2.56533)
cast_shadow = 0
gi_lightmap_scale = 0
mesh = SubResource("BoxMesh_ma0ir")
Skeleton = null
script = ExtResource("3_umdxf")
size = Vector3(6.4, 2, 3.6)
texture = ExtResource("8_kdopp")
modulate = Color(1, 1, 1, 0.901961)
albedo_mix = 0.8
enable_fade = false
metadata/_custom_type_script = "uid://feckn7f3pmud"

[node name="MyLogoDistanceFade" type="MeshInstance3D" parent="CompatibilityDecals"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 9.19723, -0.475724, 7.22857)
gi_lightmap_scale = 0
visibility_range_end = 10.0
mesh = SubResource("BoxMesh_u0d3p")
Skeleton = null
skeleton = NodePath("../..")
script = ExtResource("3_umdxf")
size = Vector3(6.4, 0.1, 3.6)
texture = ExtResource("8_kdopp")
modulate = Color(1, 1, 1, 0.729412)
albedo_mix = 0.9
enable_fade = false
metadata/_custom_type_script = "uid://feckn7f3pmud"

[node name="Label3D" type="Label3D" parent="CompatibilityDecals/MyLogoDistanceFade"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.16502, 0)
pixel_size = 0.01
text = "Distance Test"

[node name="BulletHoles" type="MultiMeshInstance3D" parent="CompatibilityDecals"]
cast_shadow = 0
gi_lightmap_scale = 0
multimesh = SubResource("MultiMesh_hp8nf")
script = ExtResource("12_c6bat")
size = Vector3(0.5, 1, 0.5)
instance_count = 10
texture = ExtResource("7_6kxbp")
modulate = Color(1, 1, 1, 0.901961)
albedo_mix = 0.9
enable_fade = false
metadata/_custom_type_script = "uid://bw6heqxc8r4tx"
